--- a/English_EN.lng
+++ b/English_EN.lng
@@ -3,8 +3,9 @@ CAPTION=Emission model of spiral galaxy (tides on satellits of SMBH)
 PROJECTION_PLANE=PROJECTION PLANE
 STARTING_ANGLE=STARTING ANGLE
 INCLINATION=INCLINATION+OF GALAXY+PLANE
-EXCENTRICITY=EXCENTRICITY
+Eccentricity=Eccentricity
 [{Satellite_parameters}]
+Name=Name:
 All_spiral=All spirals
 All_bold_current=All, bold current
 All_bold_all=All, bold all
@@ -22,7 +23,7 @@ Green_green=Green-green
 Red_blue=Red-blue
 Orange_magenta=Orange-fuchsia
 Cyan_lime=Cyan-lime
-Language=?
+Language=Language
 Show=Show:
 Select_spiral=Select spiral:
 Box_width=Box width, light-years:
@@ -31,20 +32,69 @@ Cone_angle=Cone angle (0...90):
 Rotate_projection=Rotate projection (0...360):
 Inclination=Inclination (-180...180):
 Starting_angle=Starting angle (0...360):
+e_Eccentricity=e, Eccentricity (0...0.99999):
+BH_mass=Central Black Hole Mass (of Sun):
 Plasma_speed=Plasma speed kc (k=0...1):
 Final_plasma_k=Final plasma speed (0 if the same):
+Deviation_angle=Deviation angle (-90...90)
+Final_deviation_angle=Final deviation angle (in perihole)
 Spiral_arms_colors=Spiral arms colors:
 Activity_time=Activity time, years:
 Last_activity=Skip last activity, years:
-Hint1=Hint: drag center of spiral to the galaxy center
+Max_dist=Maximal distance, light-years:
+Hint1=Hint: drag center of spiral with CONTROL move to the galaxy center
+Filter_satellites=Filter satellites:
+Filter_plasma_speed=Filter plasma speed
+Skip_1st_activity=Skip first activity
 Load_under_image=Load under image
+Make_screenshot=Screenshot !
 RotAllSpirals=Rotate all spirals (0...360)
 ScaleSpirals=Scale spirals, %
+RotAll=Rotate all (0...360)
+ScaleUpAll=Scale up all, %
 Rotate_photo=Rotate image (0...360):
 Scale_photo=Scale image, %
 Del_spiral=Delete spiral
 Move_up=Move up
 Move_dn=Move down
+Bright_by_plasma_speed=Bright/width by plasma speed
+Bright_each=Change bright each ...
+Glove_all=Glove all spirals
+Glove_current=Glove current spiral
+Draw_as=Draw ...
+as_dots=... as dots
+as_polygons=... as polygons
+Transparency=Transparency...
+No_transp=No
+Show_spirals=Show arms...
+Both=Both
+One=One
+Two=Two
+Both_but_2nd_light=Both but second is lightened
+Grab_marker_lines=Grab scrinshots with marker lines
+Draw_orbits_x1000=Draw orbits of all satellites magnified x 1000
+Grid_100x100=Grab to grid 100x100 pixels
+Coordinate_letters_digits=Draw coordinate letters && digits
+Never=Never
+Once_on_top_left=Ones on top and left edges
+Each_10_cells=Each 10 cells and on right/bottom edges too
+Grab_rotated=Grab rotated 90 degrees CW
+Change_start_and_rotation_together=Change starting angle and projection rotation together
+Compensate_plasma_speed_by_period=Compensate plasma speed change by period
+3D_fly=3D-fly with Right Mouse Button
+Save_position_size=Save position && size
+Restore_position_size=Restore size/position...
+Unscale_unrotate=Unscale/unrotate image scaling rotating all spirals
+Scale_rotate_spirals=Scale/rotate all spirals rather then image
+Scale_up_shift=Scale up & shift all (magnifier mode)
+Use_control_to_drag_center=Use CONTROL to drag center
+Show_cone_angle=Show Cone angle
+Plasma_alter=Plasma speed alternative rule
+Time_retrospective=Time retrospective to point
+Calculate_brightness_diff=Calculate brightness difference
+Copy_to_table=Copy parameters to table
+Paste_params=Paste parameters
+Reset=Reset
 CAPTION=Satellite /galaxy parameters
 H=Hint: drag center of spiral to the galaxy center
 H1=Hint: drag over label above to change value
@@ -59,8 +109,13 @@ H9=Hint: type N1-N2 or list of Nums space separated
 H10=Hint: use also names in filters instead of numbers
 H11=Hint: * in filters refers to a current satellite
 H12=Hint: drag with RMB in box to fly/reset camera
-H13=Hint: click on hint to copy a / q values
-Reset=All values will be set to default. Continue?
+H13=Hint: drag with Shift+RMB in box to fly/reset camera along only X or Y axis
+H14=Hint: click on hint to copy a / q values
+H15=Hint: Control+mouse_wheel to switch between last loaded images
+H16=Hint: When in <Scale Up Shift All> magnifier mode, drag with LMB from a center to move both a model and an image
+H17=Hint: mouse_wheel to switch between satellites
+H18=Hint: press Screenshot button with SHIFT to save a sequence of frames to a directory
+Reset_continue=All values will be set to default. Continue?
 [{Long_operation}]
 Started=A long operation is started...
 Pause1=Pause
